step9/src/app/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: spring-boot-example
          image: isaryo13/spring-boot-example:latest
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /config
      volumes:
        - name: config-volume
          configMap:
            name: spring-config
            items:
              - key: application.properties
                path: application.properties
