step9/src/app/service.yml
kind: Service
apiVersion: v1
metadata:
  name: app-svc
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
