step9/src/app/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: app-svc
              servicePort: 8080
